--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
     "name":"js-csv-viewer",
     "version":"0.0.1",
     "dependencies":{
-        "express":"~3",
+        "express":"~3"
     }
 }
