--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name":"js-csv-viewer",
     "version":"0.0.1",
     "dependencies":{
-        "express":"~3"
+        "express":"~3",
+        "ejs":"~0.8"
     }
 }
